📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -16526,5 +16526,109 @@
         "published": "Tue, 16 Dec 2025 17:13:07 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46291172\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/doordash-rolls-out-zesty-an-ai-social-app-for-discovering-new-restaurants/",
+        "title": "DoorDash rolls out Zesty, an AI social app for discovering new restaurants",
+        "link": "https://techcrunch.com/2025/12/16/doordash-rolls-out-zesty-an-ai-social-app-for-discovering-new-restaurants/",
+        "published": "Tue, 16 Dec 2025 18:48:43 +0000",
+        "source": "TechCrunch",
+        "summary": "Users can view and share photos and comments about restaurants they\u2019ve visited, discover content from others, and follow people just like on any social network."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/metas-ai-glasses-can-now-help-you-hear-conversations-better/",
+        "title": "Meta\u2019s AI glasses can now help you hear conversations better",
+        "link": "https://techcrunch.com/2025/12/16/metas-ai-glasses-can-now-help-you-hear-conversations-better/",
+        "published": "Tue, 16 Dec 2025 18:30:55 +0000",
+        "source": "TechCrunch",
+        "summary": "Conversation focus uses the AI glasses' open-ear speakers to amplify the voice of the person you're talking to, says Meta."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/openai-continues-on-its-code-red-warpath-with-new-image-generation-model/",
+        "title": "OpenAI continues on its \u2018code red\u2019 warpath with new image generation model",
+        "link": "https://techcrunch.com/2025/12/16/openai-continues-on-its-code-red-warpath-with-new-image-generation-model/",
+        "published": "Tue, 16 Dec 2025 18:22:50 +0000",
+        "source": "TechCrunch",
+        "summary": "OpenAI rolls out GPT Image 1.5 for ChatGPT, promising 4x faster generation, better instruction-following, and precise edits. The launch  escalates its rivalry with Google Gemini."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/845546/kindle-scribe-colorsoft-paperwhite-holidays-2025-deal-sale",
+        "title": "Kindles make for even better gifts now most are on sale",
+        "link": "https://www.theverge.com/gadgets/845546/kindle-scribe-colorsoft-paperwhite-holidays-2025-deal-sale",
+        "published": "2025-12-16T13:32:54-05:00",
+        "source": "The Verge",
+        "summary": "If you\u2019re shopping for a book lover, it\u2019s hard to beat a Kindle, especially if your giftee already owns a library of Kindle books. Amazon\u2019s latest sale makes them even easier to recommend: the last-gen Kindle Scribe with 32GB of storage and ads is matching its best price to date starting at $279.99 ($140 off) [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/845532/larry-ellison-paramount-wb-netflix-takeover-oracle",
+        "title": "Larry Ellison&#8217;s big dumb gift to his large adult son",
+        "link": "https://www.theverge.com/entertainment/845532/larry-ellison-paramount-wb-netflix-takeover-oracle",
+        "published": "2025-12-16T13:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Media is a business about dreams, and Larry Ellison's son is dreaming big. This might explain why the case for Paramount Skydance to buy Warner Bros. Discovery is so incoherent. In October, Warner Bros. put itself up for sale, leading to a number of bids. The two we are concerned with are a bid from [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/22371561/best-4k-tv-deals-sale-lg-samsung-sony-tcl",
+        "title": "The best deals on 4K TVs",
+        "link": "https://www.theverge.com/22371561/best-4k-tv-deals-sale-lg-samsung-sony-tcl",
+        "published": "2025-12-16T13:21:07-05:00",
+        "source": "The Verge",
+        "summary": "Things are looking bright for those who want to nab a great TV in 2025 at a substantial discount. There\u2019s usually a great deal happening on a mid- or high-end TV from LG, Sony, Hisense, or Samsung \u2014 even if the biggest discounts remain reserved for Black Friday, Amazon Prime Day, and the lead-up to [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/leaked-debug-kit-suggests-apple-is-testing-a-new-imac-pro-among-many-other-macs/",
+        "title": "Leaked debug kit suggests Apple is testing a new \u201ciMac Pro,\u201d among many other Macs",
+        "link": "https://arstechnica.com/gadgets/2025/12/leaked-debug-kit-suggests-apple-is-testing-a-new-imac-pro-among-many-other-macs/",
+        "published": "Tue, 16 Dec 2025 18:52:43 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Resurrected high-end all-in-one could be a worthy successor to 2017's iMac Pro."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/ces-2026-preview-what-were-expecting-from-techs-biggest-conference-in-january-120000768.html?src=rss",
+        "title": "CES 2026 preview: What we're expecting from tech's biggest conference in January",
+        "link": "https://www.engadget.com/big-tech/ces-2026-preview-what-were-expecting-from-techs-biggest-conference-in-january-120000768.html?src=rss",
+        "published": "Tue, 16 Dec 2025 18:36:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>CES doesn't start until January, but whispers of the products and announcements that could be in store for tech's biggest annual conference have already started to take shape. The CES 2026 show floor is officially open from January 6 through 9, although the show kicks off with events on Sunday January 4 and a host of press conferences on Monday. As always, product demos, announcements and networking will be happening at the Las Vegas Convention Center and surrounding hotels all over the city."
+    },
+    {
+        "id": "https://gizmodo.com/karl-urban-says-johnny-cage-is-the-most-physically-demanding-role-hes-ever-had-2000700290",
+        "title": "Karl Urban Says Johnny Cage Is the Most Physically Demanding Role He\u2019s Ever Had",
+        "link": "https://gizmodo.com/karl-urban-says-johnny-cage-is-the-most-physically-demanding-role-hes-ever-had-2000700290",
+        "published": "Tue, 16 Dec 2025 19:00:48 +0000",
+        "source": "Gizmodo",
+        "summary": "He's been in 'Lord of the Rings,' 'Star Trek,' 'Dredd,' 'The Boys,' and many more, but 'Mortal Kombat II' really put the star to the test."
+    },
+    {
+        "id": "https://gizmodo.com/vw-closes-german-plant-for-first-time-ever-plant-will-pivot-to-ai-research-2000700232",
+        "title": "VW Closes German Plant for First Time Ever. Plant Will Pivot to AI Research",
+        "link": "https://gizmodo.com/vw-closes-german-plant-for-first-time-ever-plant-will-pivot-to-ai-research-2000700232",
+        "published": "Tue, 16 Dec 2025 18:30:12 +0000",
+        "source": "Gizmodo",
+        "summary": "The auto industry continues its push into an AI-driven future"
+    },
+    {
+        "id": "https://www.zdnet.com/article/change-oneplus-settings-better-performance/",
+        "title": "Own a OnePlus phone? I changed 10 settings that gave mine a big performance boost",
+        "link": "https://www.zdnet.com/article/change-oneplus-settings-better-performance/",
+        "published": "Tue, 16 Dec 2025 18:58:00 GMT",
+        "source": "Latest news",
+        "summary": "Are you getting the most out of your OnePlus device? Adjust these settings to unlock better performance and faster speeds."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-search-airfare-research/",
+        "title": "Google says this is the best time to book flights, but its other findings may surprise you more",
+        "link": "https://www.zdnet.com/article/google-search-airfare-research/",
+        "published": "Tue, 16 Dec 2025 18:27:00 GMT",
+        "source": "Latest news",
+        "summary": "Hunting for the best holiday flight deals? Google's years of airfare data reveal the smartest times to book, and why."
+    },
+    {
+        "id": "https://www.tabulamag.com/p/too-fast-to-think-the-hidden-fatigue",
+        "title": "Too Fast to Think: The Hidden Fatigue of AI Vibe Coding",
+        "link": "https://www.tabulamag.com/p/too-fast-to-think-the-hidden-fatigue",
+        "published": "Tue, 16 Dec 2025 18:32:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46292365\">Comments</a>"
     }
 ]
