📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -16630,5 +16630,101 @@
         "published": "Tue, 16 Dec 2025 18:32:46 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46292365\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/slate-crosses-150000-reservations-despite-waning-ev-truck-enthusiasm/",
+        "title": "Slate crosses 150,000 reservations despite waning EV truck enthusiasm",
+        "link": "https://techcrunch.com/2025/12/16/slate-crosses-150000-reservations-despite-waning-ev-truck-enthusiasm/",
+        "published": "Tue, 16 Dec 2025 20:05:49 +0000",
+        "source": "TechCrunch",
+        "summary": "It took Slate Auto about seven months to grow its customer list by 50%, but new reservations appear to be outpacing any cancelations."
+    },
+    {
+        "id": "https://www.theverge.com/news/845499/hollyland-lyra-4k-uhd-webcam-wireless-receiver-lark-a1-microphone",
+        "title": "You can pair a tiny wireless mic to this 4K webcam",
+        "link": "https://www.theverge.com/news/845499/hollyland-lyra-4k-uhd-webcam-wireless-receiver-lark-a1-microphone",
+        "published": "2025-12-16T14:22:21-05:00",
+        "source": "The Verge",
+        "summary": "Hollyland, a company best known for affordable wireless microphones that are popular with creators, has announced its first webcam, the small 4K Lyra. While it lacks advanced features like the Insta360 Link's tracking gimbal, it's one of the first webcams we've seen that's designed to improve how you sound by connecting directly to one of [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/best-apple-tv-plus-shows/",
+        "title": "The 40 Best Shows on Apple TV, WIRED\u2019s Picks (December 2025)",
+        "link": "https://www.wired.com/story/best-apple-tv-plus-shows/",
+        "published": "Tue, 16 Dec 2025 20:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Down Cemetery Road, Pluribus, and The Morning Show are among the best shows on Apple TV this month."
+    },
+    {
+        "id": "https://www.wired.com/story/grindr-ai-first-era-everything-app-for-the-gay-guy/",
+        "title": "Grindr Goes \u2018AI-First\u2019 as It Strives to Be an \u2018Everything App for the Gay Guy\u2019",
+        "link": "https://www.wired.com/story/grindr-ai-first-era-everything-app-for-the-gay-guy/",
+        "published": "Tue, 16 Dec 2025 19:33:39 +0000",
+        "source": "WIRED",
+        "summary": "After controlling shareholders failed to take Grindr private and controversies over data and the banning of the phrase \u201cNo Zionists,\u201d Grindr\u2019s CEO opens up about AI, privacy, and big expansion plans."
+    },
+    {
+        "id": "https://www.engadget.com/ai/youtube-is-letting-creators-make-playable-games-with-a-gemini-3-tool-195500318.html?src=rss",
+        "title": "YouTube is letting creators make playable games with a Gemini 3 tool",
+        "link": "https://www.engadget.com/ai/youtube-is-letting-creators-make-playable-games-with-a-gemini-3-tool-195500318.html?src=rss",
+        "published": "Tue, 16 Dec 2025 19:55:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Google's at it again, once more insisting that AI is something people need or want more of in their lives. The latest move comes from YouTube Gaming, which <a class=\"link\" href=\"https://x.com/YouTubeGaming/status/2000989303086649637\" target=\"_blank\">announced</a> an open beta for a project called Playables Builder. This allows select YouTube Creators to use a &quot;prototype web app built using Gemini 3&quot; to make bite-sized games, no coding required.&nbsp;</p><div><blockquote class=\"twitt"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/crunchyroll-annual-subscriptions-are-on-sale-for-the-holidays-194345327.html?src=rss",
+        "title": "Crunchyroll annual subscriptions are on sale for the holidays",
+        "link": "https://www.engadget.com/entertainment/streaming/crunchyroll-annual-subscriptions-are-on-sale-for-the-holidays-194345327.html?src=rss",
+        "published": "Tue, 16 Dec 2025 19:43:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you're looking for something to watch during a holiday break from work or school, you can't go wrong with anime, and right now you can sign-up for <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=b79b93c2-acb6-4dce-94f0-adb51960a04a&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=d4b4dd4d-8f13-4ef2-9537-58b9ba035b39&amp;featureId=text-link&amp;merchantName=Crunchyroll&amp;linkText=a+year+of+Crunchyroll&amp;custData=eyJzb3VyY2VOYW1lIjoiV2ViLURlc2t"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/netflix-will-soon-start-airing-video-podcasts-like-the-breakfast-club-193112093.html?src=rss",
+        "title": "Netflix will soon start airing video podcasts like The Breakfast Club",
+        "link": "https://www.engadget.com/entertainment/streaming/netflix-will-soon-start-airing-video-podcasts-like-the-breakfast-club-193112093.html?src=rss",
+        "published": "Tue, 16 Dec 2025 19:31:12 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Netflix has inked a deal with iHeartMedia <a href=\"https://www.iheartmedia.com/press/netflix-and-iheartmedia-announce-exclusive-video-podcast-partnership-top-iheartpodcasts\">to begin showing video podcasts</a>, so the content <a href=\"https://www.engadget.com/entertainment/streaming/netflix-is-reportedly-going-big-on-video-podcasts-for-2026-133025499.html\">will never, ever run out</a>. The partnership covers new episodes from more than 15 popular podcasts, including <em>The Breakfast Club</em"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/meta-is-rolling-out-conversation-focus-and-ai-powered-spotify-features-to-its-smart-glasses-192133928.html?src=rss",
+        "title": "Meta is rolling out Conversation Focus and AI-powered Spotify features to its smart glasses",
+        "link": "https://www.engadget.com/wearables/meta-is-rolling-out-conversation-focus-and-ai-powered-spotify-features-to-its-smart-glasses-192133928.html?src=rss",
+        "published": "Tue, 16 Dec 2025 19:21:33 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Back in September during Meta Connect, the company previewed a new ability for its smart glasses lineup called Conversation Focus. The feature, which is able to amplify the voices of people around you, is now starting <a class=\"no-affiliate-link link\" href=\"https://www.meta.com/blog/ai-glasses-v21-software-update-conversation-focus-soundtrack-your-world-spotify/\" target=\"_blank\">to roll out</a> in the company's latest batch of software updates.</p><p>When enabled, the feature is meant to make"
+    },
+    {
+        "id": "https://gizmodo.com/7-burning-questions-we-have-after-the-it-welcome-to-derry-finale-2000699510",
+        "title": "7 Burning Questions We Have After the \u2018It: Welcome to Derry\u2019 Finale",
+        "link": "https://gizmodo.com/7-burning-questions-we-have-after-the-it-welcome-to-derry-finale-2000699510",
+        "published": "Tue, 16 Dec 2025 20:00:04 +0000",
+        "source": "Gizmodo",
+        "summary": "HBO\u2019s Stephen King adaptation delivered plenty of Pennywise, but we have some lingering thoughts about what happened and what\u2019s next."
+    },
+    {
+        "id": "https://gizmodo.com/instagram-bringing-vertical-video-to-tvs-2000700289",
+        "title": "Instagram Bringing Vertical Video to TVs",
+        "link": "https://gizmodo.com/instagram-bringing-vertical-video-to-tvs-2000700289",
+        "published": "Tue, 16 Dec 2025 19:15:28 +0000",
+        "source": "Gizmodo",
+        "summary": "You don't even have to turn your TV sideways."
+    },
+    {
+        "id": "https://www.sebastianaaltonen.com/blog/no-graphics-api",
+        "title": "No Graphics API",
+        "link": "https://www.sebastianaaltonen.com/blog/no-graphics-api",
+        "published": "Tue, 16 Dec 2025 19:20:17 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46293062\">Comments</a>"
+    },
+    {
+        "id": "https://openai.com/index/new-chatgpt-images-is-here/",
+        "title": "GPT Image 1.5",
+        "link": "https://openai.com/index/new-chatgpt-images-is-here/",
+        "published": "Tue, 16 Dec 2025 18:07:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46291941\">Comments</a>"
     }
 ]
