📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -16822,5 +16822,77 @@
         "published": "Tue, 16 Dec 2025 00:50:41 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46283276\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/wikiflix-shows-us-what-netflix-would-have-been-like-100-years-ago/",
+        "title": "WikiFlix shows us what Netflix would have been like 100 years ago",
+        "link": "https://techcrunch.com/2025/12/16/wikiflix-shows-us-what-netflix-would-have-been-like-100-years-ago/",
+        "published": "Tue, 16 Dec 2025 21:58:32 +0000",
+        "source": "TechCrunch",
+        "summary": "On WikiFlix, a Netflix-inspired archive of public domain films, you can watch movies like \"It's a Wonderful Life\" and \"Noseferatu\" for free."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/x-updates-its-terms-files-countersuit-to-lay-claim-to-the-twitter-trademark-after-newcomers-challenge/",
+        "title": "X updates its terms, files countersuit to lay claim to the \u2018Twitter\u2019 trademark after newcomer\u2019s challenge",
+        "link": "https://techcrunch.com/2025/12/16/x-updates-its-terms-files-countersuit-to-lay-claim-to-the-twitter-trademark-after-newcomers-challenge/",
+        "published": "Tue, 16 Dec 2025 21:11:48 +0000",
+        "source": "TechCrunch",
+        "summary": "X's new terms of service say that no one can use the Twitter name, trademarks, logos and more without written consent."
+    },
+    {
+        "id": "https://www.theverge.com/23769068/best-ebook-readers",
+        "title": "The best e-reader to buy right now",
+        "link": "https://www.theverge.com/23769068/best-ebook-readers",
+        "published": "2025-12-16T17:07:50-05:00",
+        "source": "The Verge",
+        "summary": "Any ebook reader will let you cram a Beauty and the Beast-sized library\u2019s worth of books in your pocket, but so will your phone. An ebook reader offers a more book-like reading experience, with fewer distractions and less eye strain, and many include extra features, like adjustable frontlighting. Some really are pocketable. Others are waterproof [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/report/845725/taylor-swift-gudea-report-rolling-stone-social-media-discourse-bots",
+        "title": "A vague study on Nazi bots created chaos in the Taylor Swift fan universe",
+        "link": "https://www.theverge.com/report/845725/taylor-swift-gudea-report-rolling-stone-social-media-discourse-bots",
+        "published": "2025-12-16T16:30:14-05:00",
+        "source": "The Verge",
+        "summary": "On December 9th, Rolling Stone published a story that some saw as a bombshell: a network of coordinated, \"inauthentic\" social media accounts had a hand in the weekslong discourse that trailed the release of Taylor Swift's recent album, The Life of a Showgirl. It was a big deal for those in the Swiftie/anti-Swiftie universe. Immediately [&#8230;]"
+    },
+    {
+        "id": "https://gizmodo.com/new-crash-clock-warns-of-2-8-day-window-before-likely-orbital-collision-2000700374",
+        "title": "New \u2018CRASH Clock\u2019 Warns of 2.8-Day Window Before Likely Orbital Collision",
+        "link": "https://gizmodo.com/new-crash-clock-warns-of-2-8-day-window-before-likely-orbital-collision-2000700374",
+        "published": "Tue, 16 Dec 2025 21:20:50 +0000",
+        "source": "Gizmodo",
+        "summary": "The CRASH Clock is a new metric for measuring the risks of satellite congestion in low-Earth orbit. Its calculations are disturbing."
+    },
+    {
+        "id": "https://gizmodo.com/openai-defaults-free-users-to-cheapest-model-to-cut-back-on-costs-2000700346",
+        "title": "OpenAI Defaults Free Users to Cheapest Model to Cut Back on Costs",
+        "link": "https://gizmodo.com/openai-defaults-free-users-to-cheapest-model-to-cut-back-on-costs-2000700346",
+        "published": "Tue, 16 Dec 2025 21:15:59 +0000",
+        "source": "Gizmodo",
+        "summary": "They're betting people won't notice."
+    },
+    {
+        "id": "https://mashable.com/video/fallout-season-2-interview-walton-goggins-aaron-moten-geneva-robertson",
+        "title": "What tech would the Fallout cast steal from the show?",
+        "link": "https://mashable.com/video/fallout-season-2-interview-walton-goggins-aaron-moten-geneva-robertson",
+        "published": "Tue, 16 Dec 2025 21:12:32 +0000",
+        "source": "Mashable",
+        "summary": "What technology would \"Fallout\" stars Walton Goggins, Aaron Moten, and showrunner Geneva Robertson-Dworet want in their lives?"
+    },
+    {
+        "id": "https://readwrite.com/belgian-gaming-commission-signs-agreement-dns-belgium-illegal-gambling/",
+        "title": "Belgian Gaming Commission signs agreement with DNS Belgium on illegal gambling detection",
+        "link": "https://readwrite.com/belgian-gaming-commission-signs-agreement-dns-belgium-illegal-gambling/",
+        "published": "Tue, 16 Dec 2025 22:01:13 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A Belgian flag covered in poker chips. Belgian Gaming Commission signs agreement with DNS Belgium on illegal gambling detection\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Belgian-Gaming-Commission-signs-agreement-with-DNS-Belgium-on-illegal-gambling-detection-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Belgium\u2019s national gambling regulator, Kansspelcommis"
+    },
+    {
+        "id": "https://martin.kleppmann.com/2025/12/08/ai-formal-verification.html",
+        "title": "Prediction: AI will make formal verification go mainstream",
+        "link": "https://martin.kleppmann.com/2025/12/08/ai-formal-verification.html",
+        "published": "Tue, 16 Dec 2025 21:14:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46294574\">Comments</a>"
     }
 ]
